# amply-react-native

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.gradle  codegen.config.json  expo-module.config.json  jest.config.js  package.json  react-native.config.js  settings.gradle  tsconfig.base.json  tsconfig.build.json  tsconfig.json  tsup.config.ts
android/: build.gradle  consumer-rules.pro  settings.gradle
android/src/main/java/tools/amply/sdk/reactnative/: AmplyModule.kt  AmplyPackage.kt
android/src/main/java/tools/amply/sdk/reactnative/core/: AmplyClient.kt  DefaultAmplyClient.kt
android/src/main/java/tools/amply/sdk/reactnative/model/: AmplyInitializationOptions.kt  DataSetType.kt  DataSetTypeMapper.kt  DeepLinkPayload.kt  EventEnvelope.kt
android/src/main/jni/: AmplyTurboModule.cpp  CMakeLists.txt
android/src/newarch/java/tools/amply/sdk/reactnative/: NativeAmplyModuleSpec.java
android/src/newarch/jni/: AmplyReactNative-generated.cpp  AmplyReactNative.h  CMakeLists.txt
docs/: ARCHITECTURE.md
example/bare/: README.md  app.json  metro.config.js  package-lock.json  package.json  react-native.config.js
example/bare/android/: settings.gradle
example/bare/android/app/: build.gradle
example/bare/android/app/src/main/: AndroidManifest.xml
example/bare/android/app/src/main/java/tools/amply/sdk/sample/bare/: MainActivity.kt  MainApplication.kt
example/bare/android/app/src/main/res/values/: strings.xml
example/bare/ios/: Podfile
example/bare/ios/AmplyBareExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/bare/ios/AmplyBareExample.xcodeproj/: project.pbxproj
example/bare/ios/AmplyBareExample.xcodeproj/xcshareddata/xcschemes/: AmplyBareExample.xcscheme
example/bare/src/: App.tsx  navigation.tsx
example/bare/src/hooks/: useAmplyDemo.ts
example/bare/src/screens/: HomeScreen.tsx  PromoScreen.tsx
example/bare/src/types/: navigation.ts
example/bare/src/utils/: amplyDeepLinkRouter.ts  formatTimestamp.ts
example/expo/: README.md  app.json  app.json.bak  app.plugin.js  expo.config.js  metro.config.js  package-lock.json  package.json
example/expo/app/: _layout.tsx  index.tsx
example/expo/app/promo/: [id].tsx
example/expo/plugins/: withLocalAmplySDK.js
example/expo/scripts/: register-amply-package.js
example/expo/src/hooks/: useAmplyDemo.ts
example/expo/src/utils/: amplyDeepLinkRouter.ts  formatTimestamp.ts
ios/: AmplyReactNative.podspec  README.md
ios/Sources/AmplyReactNative/: AmplyModule.mm
ios/Sources/AmplyReactNative/Amply/: Amply-generated.mm  Amply.h
ios/Sources/AmplyReactNative/AmplyReactNative/: AmplyReactNative-generated.mm  AmplyReactNative.h
jest/mocks/: reactNative.js
plugin/: tsconfig.tsbuildinfo
plugin/src/: index.ts  withAmply.ts
scripts/: codegen.js
src/: index.ts  nativeModule.ts  systemEventUtils.ts  systemEvents.ts
src/__tests__/: index.test.ts
src/hooks/: useAmplySystemEvents.ts
src/nativeSpecs/: NativeAmplyModule.ts
